--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
+    "generate:words": "node ./scripts/generate-words.js",
     "typecheck": "tsc -b --noEmit",
     "test": "vitest",
     "test:run": "vitest run"
