--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@floating-ui/react": "0.27.16",
     "@supabase/supabase-js": "2.88.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
