--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@floating-ui/react": "0.27.16",
     "@supabase/supabase-js": "2.88.0",
     "canvas-confetti": "^1.9.4",
+    "classnames": "2.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "3.6.0"
