--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "2.88.0",
     "canvas-confetti": "^1.9.4",
     "classnames": "2.5.1",
+    "motion": "12.34.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "3.6.0"
